# nvimc

./: .gitignore  COMMANDS.md  KEYBINDINGS.md  README.md  SESSION_NOTES.md  init.lua  install-neovim.sh  lazy-lock.json  nvim-open  nvim-pack-lock.json
.cursor/rules/: neovim-communication.mdc
cursor-nvim-compatibility/: README.md
cursor-nvim-compatibility/rules/: neovim-communication.mdc
cursor-nvim-compatibility/scripts/: nvim-open  nvim-send
dotfiles/: .clang-format  .clang-tidy  .clangd  .hadolint.yaml  .markdownlint.json  .mypy.ini  .rustfmt.toml  .shellcheckrc  .yamllint  README.md  cursor-settings.md  kitty.conf  pyproject.toml
install/: install-neovim.sh  migrate-from-lazy.sh  setup-alias.sh
lsp_test/cpp/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  build.sh  compile_commands.json
lsp_test/cpp/include/core/: Component.hpp  Entity.hpp
lsp_test/cpp/include/graphics/: Renderer.hpp  Shape.hpp
lsp_test/cpp/include/utils/: Logger.hpp  MathUtils.hpp
lsp_test/cpp/src/: cppcheck_test.cpp  main.cpp  stresstest.cpp
lsp_test/cpp/src/core/: Component.cpp  Entity.cpp
lsp_test/cpp/src/graphics/: Renderer.cpp  Shape.cpp
lsp_test/cpp/src/utils/: Logger.cpp  MathUtils.cpp
lsp_test/python/: __init__.py  lint_test.py  main.py  pyproject.toml
lsp_test/python/core/: __init__.py  component.py  entity.py
lsp_test/python/graphics/: __init__.py  renderer.py  shape.py
lsp_test/python/utils/: __init__.py  logger.py  math_utils.py
lsp_test/shell/: lint_test.sh  main.sh  utils.sh
lua/config/: colorscheme.lua  keymaps.lua  options.lua  plugins.lua
(+79 files in other folders)
